# MicroRatchet

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  MicroRatchet.sln  Readme.md
MicroRatchet/: AeadCipher.cs  Cipher.cs  Class1.cs  ClientState.cs  DefaultServices.cs  Digest.cs  EcdhRatchet.cs  EcdhRatchetStep.cs  Extensions.cs  GMac.cs  HMac.cs  ICipher.cs  ICipherFactory.cs  IDigest.cs  IKeyAgreement.cs  IKeyDerivation.cs  IKeyExchangeFactory.cs  IRandomNumberGenerator.cs  ISecureStorage.cs  IServices.cs  ISignature.cs  IStorageProvider.cs  IVerifier.cs  IVerifierFactory.cs  KeyAgreement.cs  KeyDerivation.cs  MessageType.cs  MicroRatchet.csproj  MicroRatchetClient.cs  MicroRatchetConfiguration.cs  ServerState.cs  Signature.cs  State.cs  SymmetricRacthet.cs  Verifier.cs
MicroRatchet.Performance/: MicroRatchet.Performance.csproj  Program.cs
MicroRatchet.Tests/: AdvancedClientTests.cs  AeadCipherTests.cs  BasicClientTests.cs  BigEndianBitConverter.cs  CipherTests.cs  DigestTests.cs  GmacTests.cs  HMacTests.cs  KdfTests.cs  KeyExchangeTests.cs  MicroRatchet.Tests.csproj  ObfuscationTests.cs  SignatureTests.cs  StateTests.cs
MicroRatchet/Properties/: AssemblyInfo.cs
c/libmicroratchet/: CMakeLists.txt  aesctr.c  config.example.h  context.c  context_state.c  highlevel.c  internal.c  internal.h  kdf.c  libmicroratchet.vcxproj  microratchet.h  pch.h  ratchet.c
c/microratchetcrypto/: CMakeLists.txt  aes.c  aes.h  ecc_common.c  ecc_common.h  ecdh.c  ecdsa.c  pch.h  poly.c  rng.c  sha.c
c/microratchetcrypto/ec/: LICENSE  eckey_impl.h  libsecp256k1-config.h  secp256k1.c  util.h
c/microratchetcrypto/ec/include/: secp256k1.h
c/microratchetmbed/: CMakeLists.txt  aes.c  ecc_common.c  ecc_common.h  ecdh.c  ecdsa.c  pch.h  poly.c  rng.c  sha.c
c/microratchetmbed/config/: timing_alt.h  user_config.h
c/microratchetopenssl/: CMakeLists.txt  aes.c  ecc_common.c  ecc_common.h  ecdh.c  ecdsa.c  pch.h  poly.c  rng.c  sha.c
c/microratchettests/: CMakeLists.txt  aes.cpp  aeskdf.cpp  context.cpp  ecc.cpp  ecdh.cpp  ecdhratchet.cpp  ecdsa.cpp  highlevel.cpp  memcpy.cpp  microratchettests.vcxproj  pch.h  poly.cpp  reference.cpp  rng.cpp  sha.cpp  storage.cpp  support.cpp  support.h  symmetricratchet.cpp
c/microratchettests/port/: virt.ld
c/microratchetwolfssl/: CMakeLists.txt  aes.c  ecc_common.c  ecc_common.h  ecdh.c  ecdsa.c  microratchetwolfssl.vcxproj  microratchetwolfssl.vcxproj.filters  pch.h  poly.c  rng.c  sha.c
c/wolfssl/: CMakeLists.txt  wolfssl.vcxproj
csharp/: MicroRatchet.sln
csharp/MicroRatchet/: MicroRatchet.csproj  MicroRatchetClient.cs  MicroRatchetConfiguration.cs  MicroRatchetExtensions.cs  ReceiveResult.cs
csharp/MicroRatchet.BouncyCastle/: Aes.cs  DefaultServices.cs  InMemoryNonceCache.cs  KeyAgreement.cs  KeyAgreementFactory.cs  MicroRatchet.BouncyCastle.csproj  Signature.cs
csharp/MicroRatchet.Performance/: MicroRatchet.Performance.csproj
csharp/MicroRatchet.Tests/: AesKdfTests.cs  BytePrintHelper.cs  ClientInitializationTests.cs  Common.cs  DefaultKexFactory.cs  DigestTests.cs  EcdhRatchetTests.cs  ExtendedClientTests.cs  GlobalSuppressions.cs  MicroRatchet.Tests.csproj  SignatureTests.cs  StateTests.cs  SymmetricRatchetTests.cs
csharp/MicroRatchet/Infrastructure/: ClientState.cs  EcdhRatchet.cs  EcdhRatchetStep.cs  ServerState.cs
csharp/MicroRatchet/Interfaces/: IAes.cs  IKeyAgreement.cs  IKeyCache.cs  IServices.cs
csharp/MicroRatchet/Internal/: AesCtrMode.cs  BigEndianBitConverter.cs  Log.cs
examples/csharp/: Client.cs  MicroRatchet.Examples.csproj
libmicroratchet/: callbacks.c  client.c  internal.h  kdf.c  libmicroratchet.vcxproj  libmicroratchet.vcxproj.filters  microratchet.h
microratchettests/: aes.cpp  client.cpp  ecdh.cpp  ecdsa.cpp  gmac.cpp  hmac.cpp  microratchettests.vcxproj  pch.h  sha.cpp  support.cpp  support.h  test.cpp
microratchetwolfssl/: aes.c  ecc_common.c  ecc_common.h  ecdh.c  ecdsa.c  gmac.c  microratchetwolfssl.vcxproj  microratchetwolfssl.vcxproj.filters  rng.c  sha.c
port/: armcortex.cpp  lm3s6965evb.ld
src/: MicroRatchet.sln
src/C/: CMakeLists.txt
src/C/gtest/: gmock.vcxproj  gtest.vcxproj
src/C/libmicroratchet/: CMakeLists.txt  aesctr.c  bitconverter.c  callbacks.c  client.c  context.c  context_state.c  internal.c  internal.h  kdf.c  libmicroratchet.vcxproj  libmicroratchet.vcxproj.filters  microratchet.h  pch.h  ratchet.c
src/C/microratchettests/: CMakeLists.txt  aes.cpp  aesctr.cpp  aeskdf.cpp  bitconverter.cpp  client.cpp  context.cpp  ecdh.cpp  ecdhratchet.cpp  ecdsa.cpp  gmac.cpp  hmac.cpp  initialization.cpp  microratchettests.vcxproj  pch.h  poly.cpp  rng.cpp  sha.cpp  storage.cpp  support.cpp  support.h  symmetricratchet.cpp
src/C/microratchettests/port/: startup.s  syscalls.c
src/C/microratchetwolfssl/: CMakeLists.txt  aes.c  ecc_common.c  ecc_common.h  ecdh.c  ecdsa.c  gmac.c  microratchetwolfssl.vcxproj  microratchetwolfssl.vcxproj.filters  pch.h  poly.c  rng.c  sha.c
src/C/wolfssl/: CMakeLists.txt  wolfssl.vcxproj
src/C/wolfssl/config/: config.h
src/CS/MicroRatchet.BouncyCastle/: AesFactory.cs  DefaultServices.cs  Digest.cs  GlobalSuppressions.cs  InMemoryNonceCache.cs  KeyGeneration.cs  MicroRatchet.BouncyCastle.csproj  RandomNumberGenerator.cs  Signature.cs  Verifier.cs  VerifierFactory.cs
src/CS/MicroRatchet.Performance/: MicroRatchet.Performance.csproj  Program.cs
src/CS/MicroRatchet.Tests/: AdvancedClientTests.cs  AesCtrModeTests.cs  AesKdfTests.cs  BasicClientTests.cs  CipherTests.cs  ClientInitializationTests.cs  Common.cs  DefaultKexFactory.cs  DigestTests.cs  EcdhRatchetTests.cs  ExtendedClientTests.cs  HMacTests.cs  InMemoryStorage.cs  KdfTests.cs  KeyExchangeTests.cs  LargeMessageTests.cs  MicroRatchet.Tests.csproj  (+6 more)
src/MicroRatchet.BouncyCastle/: Aes.cs  DefaultServices.cs  Digest.cs  KeyAgreement.cs  KeyGeneration.cs  MicroRatchet.BouncyCastle.csproj  RandomNumberGenerator.cs  Signature.cs  Verifier.cs
src/MicroRatchet.Examples/: Client.cs  Dtls.cs  Program.cs  Server.cs  Simple.cs
thirdParty2/: wolfssl.vcxproj
(+67 files in other folders)
